--- a/jqLight/jqLight.html
+++ b/jqLight/jqLight.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-	<title>My Light Switch</title>
-	<link href="jqLight.css" rel="StyleSheet" />
-</head>
-<body>
+	<head>
+		<title>Flashlight</title>
+		<link href="jqLight.css" rel="StyleSheet">
 
-<div id="page">
-
- </div>
-
- <div id="button">
-     <div id="switch">On</div>
- </div>
-
- <div id="page">
-
-    </div>
-    <script src='jquery.js'></script>
-    <script src="jqLight.js"></script>
-
-</body>
+	</head>
+	
+	<body class="body" id="body">
+	
+		<div id="background" class="background">
+		
+			<div id="lightswitch" class="lightswitch">
+		
+				<button id="button">Off</button>
+			
+			</div>
+			
+		</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="jqLight.js"></script>
+	</body>
+	
 </html>
