--- a/appTask2/appTask2.html
+++ b/appTask2/appTask2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-	<title>App Task 2</title>
+	<title>App Task 2 - Task Manager</title>
 	<link href="appTask2.css" rel="StyleSheet" />
 </head>
 <body>
 	<div id="page">
 		<fieldset class="inputfs">
-		<label class = "inputLabel">Add Task: </label>
+		<label class = "inputLabel">Add Task Here: </label>
 			<input class = "inputTextfield" id="taskInput" type = "text"/>
 			<button class = "inputButton" id="taskAdd">Add</button>
 		</fieldset>
