--- a/appTask3/appTask3.html
+++ b/appTask3/appTask3.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <title>Task Manager 4</title>
+    <title>Task Manager</title>
     <link href='appTask3.css' rel='Stylesheet' />
   </head>
   <body>
-    <div id='appMainWindow'>
+    <div id='TaskManagerWindow'>
       <h1 id='title'>Task Manager 4</h1>
       <fieldset>
-        <label>Task description</label>
+        <label>Task Description</label>
         <br></br>
         <input id='taskDescription' name='taskDescription' type='text' />
         <br></br>
-        <button id='buttonAddTask'>Add Task</button>
-        <button id='buttonDeleteAll'>Delete all</button>
+        <button id='buttonAddTask'>Add Task Here</button>
+        <button id='buttonDeleteAll'>Delete All Here</button>
       </fieldset>
 
       <h3 id='taskHeader'>Task List:</h3>
