--- a/appTask3/appTask3.html
+++ b/appTask3/appTask3.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id='TaskManagerWindow'>
-      <h1 id='title'>Task Manager 4</h1>
+      <h1 id='title'>Task Manager</h1>
       <fieldset>
         <label>Task Description</label>
         <br></br>
